# dreamer4-jax

./: .gitignore  README.md  data.py  data_dynamics.py  eval_bc_rew_heads.py  eval_dynamics.py  models.py  overfit_realism_experiments.py  overfit_train_dynamics.py  pyproject.toml  run_job.sh  sampler_jit.py  sampler_old.py  sampler_unified.py  submit.py  tokenizer.py  train.py  train_bc_rew_heads.py  train_dynamics.py  train_policy.py  train_tokenizer.py  utils.py
configs/: base.py  env.py
docs/: NOTES.md  appendix.txt  main.txt
dreamer/: data.py  imagination.py  models.py  sampler.py  utils.py
launchers/: submit_bc_rew_heads.py  submit_dynamics.py  submit_policy.py  submit_tokenizer.py
scripts/: eval_bc_rew_heads.py  train_bc_rew_heads.py  train_dynamics.py  train_policy.py  train_tokenizer.py
