[project]
name = "tiny-dreamer-4"
version = "0.1.0"
description = "Dreamer 4 implementation in pure Jax"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "flax>=0.12.0",
    "imageio>=2.37.0",
    "jax>=0.7.2",
    "optax>=0.2.6",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]